// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components ContextSituationRules context situation rules management allows to edit the rules of the context situation checks the input to not be empty 1`] = `
<div class="input-edit context-situation-rules"><span><form class="el-form form el-form--label-top el-form--inline"><div class="el-form-item el-form-item--feedback is-required el-form-item--mini"><!----><div class="el-form-item__content"><div class="input el-input el-input--mini"><!----><input type="text" autocomplete="off" placeholder="context_situation.edit.rules" class="el-input__inner"><!----><!----><!----></div><!----></div></div></form></span>
  <!---->
</div>
`;

exports[`Components ContextSituationRules context situation rules management allows to edit the rules of the context situation checks the input to not be empty 2`] = `
<div class="input-edit context-situation-rules"><span><form class="el-form form el-form--label-top el-form--inline"><div class="el-form-item el-form-item--feedback is-required el-form-item--mini"><!----><div class="el-form-item__content"><div class="input el-input el-input--mini"><!----><input type="text" autocomplete="off" placeholder="context_situation.edit.rules" class="el-input__inner"><!----><!----><!----></div><!----></div></div></form></span>
  <!---->
</div>
`;

exports[`Components ContextSituationRules context situation rules management allows to edit the rules of the context situation checks the input to not be empty 3`] = `
<div class="input-edit context-situation-rules"><span><form class="el-form form el-form--label-top el-form--inline"><div class="el-form-item el-form-item--feedback is-required el-form-item--mini"><!----><div class="el-form-item__content"><div class="input el-input el-input--mini"><!----><input type="text" autocomplete="off" placeholder="context_situation.edit.rules" class="el-input__inner"><!----><!----><!----></div><!----></div></div></form></span>
  <!---->
</div>
`;

exports[`Components ContextSituationRules context situation rules management allows to edit the rules of the context situation does not hid the input after editing the rules if its invalid 1`] = `
<div class="input-edit context-situation-rules"><span><form class="el-form form el-form--label-top el-form--inline"><div class="el-form-item el-form-item--feedback is-required el-form-item--mini"><!----><div class="el-form-item__content"><div class="input el-input el-input--mini"><!----><input type="text" autocomplete="off" placeholder="context_situation.edit.rules" class="el-input__inner"><!----><!----><!----></div><!----></div></div></form></span>
  <!---->
</div>
`;

exports[`Components ContextSituationRules context situation rules management allows to edit the rules of the context situation does not hid the input after editing the rules if its invalid 2`] = `
<div class="input-edit context-situation-rules"><span>My new Rule</span> <button type="button" class="el-button black-color tag-space el-button--text">
    <!----><i class="el-icon-edit"></i>
    <!----></button></div>
`;

exports[`Components ContextSituationRules context situation rules management allows to edit the rules of the context situation hides the input after editing the rules 1`] = `
<div class="input-edit context-situation-rules"><span><form class="el-form form el-form--label-top el-form--inline"><div class="el-form-item el-form-item--feedback is-required el-form-item--mini"><!----><div class="el-form-item__content"><div class="input el-input el-input--mini"><!----><input type="text" autocomplete="off" placeholder="context_situation.edit.rules" class="el-input__inner"><!----><!----><!----></div><!----></div></div></form></span>
  <!---->
</div>
`;

exports[`Components ContextSituationRules context situation rules management allows to edit the rules of the context situation hides the input after editing the rules 2`] = `
<div class="input-edit context-situation-rules"><span>My new Rule</span> <button type="button" class="el-button black-color tag-space el-button--text">
    <!----><i class="el-icon-edit"></i>
    <!----></button></div>
`;

exports[`Components ContextSituationRules context situation rules management allows to edit the rules of the context situation open input for the rules 1`] = `
<div class="input-edit context-situation-rules"><span><form class="el-form form el-form--label-top el-form--inline"><div class="el-form-item el-form-item--feedback is-required el-form-item--mini"><!----><div class="el-form-item__content"><div class="input el-input el-input--mini"><!----><input type="text" autocomplete="off" placeholder="context_situation.edit.rules" class="el-input__inner"><!----><!----><!----></div><!----></div></div></form></span>
  <!---->
</div>
`;

exports[`Components ContextSituationRules context situation rules management renders 1`] = `
<div class="input-edit context-situation-rules"><span>The Rules String</span> <button type="button" class="el-button black-color tag-space el-button--text">
    <!----><i class="el-icon-edit"></i>
    <!----></button></div>
`;
